--- a/samples/build.gradle
+++ b/samples/build.gradle
@@ -10,6 +10,13 @@ ext {
 application {
     mainClassName = javaMainClass
 }
+task runWithJavaExec(type: JavaExec) {
+    group = "Execution"
+    description = "Run the main class with JavaExecTask"
+    classpath = sourceSets.main.runtimeClasspath
+    main = javaMainClass
+}
+
 dependencies {
   implementation projects.retrofit
   implementation projects.retrofitMock
